--- a/index.html
+++ b/index.html
@@ -3,23 +3,35 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Auto-Complete Widget</title>
+		<title>Contact Search List</title>
 		<link rel="stylesheet" href="style.css" />
-		<script type="module" src="Trie.js"></script>
+		<script type="module" src="script.js"></script>
 		<script type="module" src="script.js"></script>
 	</head>
+
 	<body>
-		<nav class="navbar">Auto-Complete Widget</nav>
+		<nav
+			class="navbar navbar-light"
+			style="
+				font-size: 25px;
+				font-family: sans-serif;
+				background-color: whitesmoke;
+			">
+			Auto-Complete Widget
+		</nav>
 		<div id="container">
-			<div class="text_box autocomplete-section">
-				<h5>Type in the box below...</h5>
-				<div class="autocomplete">
-					<input id="myInput" type="text" placeholder="Search Number..." />
-				</div>
-				<button type="button" class="cancel-btn">Cancel</button>
+			<div class="text_box" style="display: flex">
+				<form autocomplete="off" style="margin: auto">
+					<h5>Type in the box below...</h5>
+					<br />
+					<div class="autocomplete" style="width: 350px">
+						<input id="myInput" type="text" placeholder="Search Number..." />
+					</div>
+					<input type="submit" value="Cancel" />
+				</form>
 			</div>
-			<div class="text_box info-section">
-				<span id="info"></span>
+			<div class="text_box" style="overflow-y: scroll">
+				<span id="info"> </span>
 			</div>
 		</div>
 		<div class="center_input">
@@ -27,16 +39,23 @@
 				type="text"
 				placeholder="Enter contact name, number"
 				id="contact_input" />
-			<button class="btn add-btn" id="add">Add Contact</button>
+			<button class="btn btn-success" id="add">Add Contact</button>
 		</div>
 		<div class="center_input">
 			<input type="text" placeholder="Enter contact number" id="delete_input" />
-			<button class="btn delete-btn" id="del">Delete Contact</button>
+			<button class="btn btn-danger" id="del">Delete Contact</button>
 		</div>
 		<template>
-			<div class="list-item">
-				<img src="./person.png" class="avatar" alt="Avatar" />
-				<div class="contact-info">
+			<div
+				class="list-group-item list-group-item-action"
+				style="display: inline-flex">
+				<span class="ks-avatar" style="align-content: center">
+					<img
+						src="./Avatar.jpeg"
+						id="Image"
+						style="margin: 10px; height: 40px; width: 40px" />
+				</span>
+				<div>
 					<span id="Name">Eric George</span>
 					<br />
 					<span id="Number">just now</span>
